dataset1235/2025-2/805158916/users/1514794398/executions/2651470117_1626817775.log
== SUBMISSION (2025-08-27 03:02:24)
-- CODE: 
from math import *

raio=float(input())

area= (pi)*raio**2
volume= 4/3*pi*raio**3

print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:01:02)
-- CODE: 
from math import *

raio=flot(input())

area = (pi)*raio**2
volume=4/3*pi*raio**3

print(roud(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:01:03)
-- CODE: 
from math import *

raio=flot(input())

area = (pi)*raio**2
volume=4/3*pi*raio**3

print(roud(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:02:15)
-- CODE: 
from math import *

raio=float(input())

area= (pi)*raio**2
volume= 4/3*pi*raio**3

print(round(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:00:09)
-- CODE: 
raio=flot(input())

area = (pi)*raio**2

volume=4/3*pi*raio**3

print(roud(area,3))

print(round(volume,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:00:46)
-- CODE: 
from math import *

raio=flot(input())

area = (pi)*raio**2

volume=4/3*pi*raio**3

print(roud(area,3))

print(round(volume,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'floor'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:01:24)
-- CODE: 
from math import *

raio=float(input())

area = (pi)*raio**2
volume=4/3*pi*raio**3

print(roud(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 03:00:13)
-- CODE: 
raio=flot(input())

area = (pi)*raio**2

volume=4/3*pi*raio**3

print(roud(area,3))

print(round(volume,3))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    raio=flot(input())
         ^^^^
NameError: name 'flot' is not defined. Did you mean: 'float'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 03:01:48)
-- CODE: 
from math import *

raio=float(input())

area= (pi)*raio**2
volume=4/3*pi*raio**3

print(roud(area,3))
print(round(volume,3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(roud(area,3))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
